# atom_sampler

./: Cargo.toml  README.md
src/: atom_event.rs  error.rs  jackmidi.rs  jackprocess.rs  lib.rs  wave_commands.rs  wave_handler.rs  wave_manager.rs
src/dsp/: sample.rs
src/ui/: elements.rs
src/wave/: mod.rs  play.rs  record.rs
