[package]
name = "atom_sampler"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "atom_sampler_lib"
path = "src/lib.rs"

[[bin]]
name = "atom_sampler_gui"
path = "src/bin/atom_sampler_gui/main.rs"

[[bin]]
name = "atom_sampler_gui_mockup"
path = "src/bin/atom_sampler_gui_mockup/main.rs"

[dependencies]
jack = { version = "0.11.4" }
crossbeam-channel = { version = "0.5.6" }
bus = { version = "2.4.1" }
ringbuf = {version = "0.3.1"}
eframe = { version = "0.24.1"}
